@@ -506,7 +506,7 @@ CoachAgent::initImpl( CmdLineParser & cmd_parser )
     M_config.parse( cmd_parser );
 
     if ( config().version() < 1.0
-         || 16.0 <= config().version() )
+         || 17.0 <= config().version() )
     {
         std::cerr << "Unsupported client version: " << config().version()
                   << std::endl;
