@@ -794,7 +794,7 @@ PlayerAgent::initImpl( CmdLineParser & cmd_parser )
     M_config.parse( cmd_parser );
 
     if ( config().version() < 8.0
-         || 16.0 <= config().version() )
+         || 17.0 <= config().version() )
     {
         std::cerr << "Unsupported client version: " << config().version()
                   << std::endl;
